assets/css/style.scss
---
---

@import "jekyll-theme-minimal";

.navigation ul .current {
	font-weight:bold;
	color:#069;
}

.collapsible.questions {
	-webkit-box-shadow: none;
	box-shadow: none;
	border: none;
}

.questions .collapsible-header, .questions .collapsible-body {
	border-bottom: none;
	padding: 0.5rem 0 0.5rem 0;
}

li .material-icons.drop-down::before {
	content: 'arrow_drop_down';
}

li.active .material-icons.drop-down::before {
	content: 'arrow_drop_up';
}

pre.quote {
	overflow-x: auto;
    white-space: pre-wrap;
    white-space: -moz-pre-wrap;
    white-space: -pre-wrap;
    white-space: -o-pre-wrap;
    word-wrap: break-word;
}

img.logo {
	padding: 3rem;
}

img.hexhive-logo {
	max-width:200px;
	margin-top:10px;
}

div.fork-me {
  position:fixed;
}

div.logo-wrapper {
	text-align: center;
}

@media print, screen and (max-width: 1360px) {
	footer .owner {
		display: -webkit-box;
	    display: -webkit-flex;
	    display: -ms-flexbox;
	    display:flex;
	    -webkit-box-align: center;
	    -webkit-align-items:center;
	    -ms-flex-align: center;
	    align-items:center;
	}
	img.logo {
		max-width: min(270px, 100%);
		padding-left: 0;
	}
	img.hexhive-logo {
		max-width:150px;
		margin-left: 5px;
	}
	div.fork-me {
	position:static;
	margin-bottom: -150px;
	}
	div.logo-wrapper {
		text-align: left;
	}
	div.navigation {
		position: absolute;
		right: 100px;
		top: 52px;
	}
	div.navigation ul {
		position: static;
	}
}

@media print, screen and (max-width: 720px) {
	div.navigation {
		position: static;
	}
	div.logo-wrapper {
		text-align: center;
	}
	img.logo {
		padding: 2rem;
	}
}

@media print, screen and (max-width: 444px) {
	footer .owner {
	    display:initial;
	}
}

